--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "normalize-scss": "~3.0.3",
-    "ace-builds": "~1.2.2"
+    "ace-builds": "~1.2.2",
+    "jroff": "*"
   }
 }
