--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "grunt-autoprefixer": "^3.0.3",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-grunticon": "^2.2.2",
     "grunt-modernizr": "^1.0.1",
     "grunt-newer": "^1.1.1",
     "grunt-sass": "^1.1.0",
