--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Online groff page parser",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "grunt build && ./deploy.sh"
   },
   "author": "Roberto Dip",
   "license": "MIT",
