--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "normalize-scss": "~3.0.3",
     "ace-builds": "~1.2.2",
-    "jroff": "*"
+    "jroff": "*",
+    "essential.js": "essential#~0.5.0"
   }
 }
